--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
          font-family: Verdana, Geneva, Tahoma, sans-serif;
          box-sizing: content-box;
          height: 250px;
-         width: 50%;
+         width: 250px;
          margin: auto;
          
          text-align: center;
